--- a/image-preview/build.gradle
+++ b/image-preview/build.gradle
@@ -35,7 +35,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.30'
+        kotlinCompilerVersion '1.4.7'
     }
 }
 
@@ -54,7 +54,12 @@ afterEvaluate {
 
                 groupId = 'com.github.mprakashdev2'
                 artifactId = 'image-preview-compose'
-                version = '2.0'
+                version = '4.0'
+            }
+        }
+        repositories {
+            maven {
+                url 'https://jitpack.io'
             }
         }
     }
