--- a/image-preview/build.gradle
+++ b/image-preview/build.gradle
@@ -46,21 +46,19 @@ dependencies {
 
 }
 
-afterEvaluate {
+
     publishing {
         publications {
             release(MavenPublication) {
-                from components.release
+              //  from components.release
 
                 groupId = 'com.github.mprakashdev2'
                 artifactId = 'image-preview-compose'
-                version = '5.0'
-            }
-        }
-        repositories {
-            maven {
-                url 'https://jitpack.io'
+                version = '6.0'
+
+                afterEvaluate {
+                    from components.release
+                }
             }
         }
     }
-}
